--- a/StewardClient/src/app/pages/util/icons/icons.component.html
+++ b/StewardClient/src/app/pages/util/icons/icons.component.html
@@ -1,38 +1,40 @@
-<h2>Font Icons</h2>
-<a href="/assets/icon-font/demo.html">Icon Font demo page</a>
-<p style="font-size: 32px; background-color: lightgrey">
-  <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
-  <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
-  <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
-</p>
-<p style="font-size: 32px; background-color: lightgrey">
-  <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
-  <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
-  <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
-</p>
-<p style="font-size: 32px; background-color: white">
-  <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
-  <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
-  <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
-</p>
-<p style="font-size: 32px; background-color: black; color: white">
-  <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
-  <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
-  <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
-</p>
+<mat-card>
+  <h2>Font Icons</h2>
+  <a href="/assets/icon-font/demo.html">Icon Font demo page</a>
+  <p style="font-size: 32px; background-color: lightgrey">
+    <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
+    <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
+    <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
+  </p>
+  <p style="font-size: 32px; background-color: lightgrey">
+    <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
+    <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
+    <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
+  </p>
+  <p style="font-size: 32px; background-color: white">
+    <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
+    <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
+    <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
+  </p>
+  <p style="font-size: 32px; background-color: black; color: white">
+    <span class="icon t10-t10id"></span>&nbsp; <span class="icon t10-gtag"></span>&nbsp;
+    <span class="icon t10-xuid"></span>&nbsp; <span class="icon t10-error"></span>&nbsp;
+    <span class="icon t10-logo-black"></span>&nbsp; <span class="icon t10-logo-white"></span>&nbsp;
+  </p>
 
-<hr />
+  <hr />
 
-<h2>Spinners</h2>
-<p>
-  <error-spinner [isActive]="true" [spinnerMessage]="'Spinner 1em'"></error-spinner>
-  <error-spinner [isActive]="false" [error]="true" [errorMessage]="'Spinner 1em'"></error-spinner>
-</p>
-<p style="font-size: 2em">
-  <error-spinner [isActive]="true" [spinnerMessage]="'Spinner 2em'"></error-spinner>
-  <error-spinner [isActive]="false" [error]="true" [errorMessage]="'Spinner 2em'"></error-spinner>
-</p>
-<p style="font-size: 4em">
-  <error-spinner [isActive]="true" [spinnerMessage]="'Spinner 4em'"></error-spinner>
-  <error-spinner [isActive]="false" [error]="true" [errorMessage]="'Spinner 4em'"></error-spinner>
-</p>
+  <h2>Spinners</h2>
+  <p>
+    <error-spinner [isActive]="true" [spinnerMessage]="'Spinner 1em'"></error-spinner>
+    <error-spinner [isActive]="false" [error]="true" [errorMessage]="'Spinner 1em'"></error-spinner>
+  </p>
+  <p style="font-size: 2em">
+    <error-spinner [isActive]="true" [spinnerMessage]="'Spinner 2em'"></error-spinner>
+    <error-spinner [isActive]="false" [error]="true" [errorMessage]="'Spinner 2em'"></error-spinner>
+  </p>
+  <p style="font-size: 4em">
+    <error-spinner [isActive]="true" [spinnerMessage]="'Spinner 4em'"></error-spinner>
+    <error-spinner [isActive]="false" [error]="true" [errorMessage]="'Spinner 4em'"></error-spinner>
+  </p>
+</mat-card>
