--- a/StewardClient/src/app/pages/util/action-monitor-singlefire/action-monitor-singlefire.component.html
+++ b/StewardClient/src/app/pages/util/action-monitor-singlefire/action-monitor-singlefire.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <div>
     <h2>Trigger Monitor 1</h2>
-    <p>This trigger is isolated from the others, and manages spinners/disable-state independently.</p>
+    <p>
+      This trigger is isolated from the others, and manages spinners/disable-state independently.
+    </p>
     <p><code>button-spinner</code> icons have been omitted where there is not an icon-button.</p>
     <div>
       <mat-checkbox [(ngModel)]="disableToggles[0]">Disable</mat-checkbox>
@@ -126,8 +128,8 @@
     <h2>Trigger Monitor 2</h2>
     <p>This trigger is blocked by other trigger monitors.</p>
     <p>
-      <code>button-spinner</code> icons have all been set to <mat-icon>pending</mat-icon> on non-icon
-      buttons.
+      <code>button-spinner</code> icons have all been set to <mat-icon>pending</mat-icon> on
+      non-icon buttons.
     </p>
     <div>
       <mat-checkbox [(ngModel)]="disableToggles[1]">Disable</mat-checkbox>
