--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -10,7 +10,7 @@
       }
     }
   }
-  
+
   .sf-horizontal {
     display: flex;
     flex-flow: row wrap;
@@ -104,8 +104,8 @@
   flex-flow: row wrap;
   align-items: center;
 
-  margin-left: -.5em;
-  margin-right: -.5em;
+  margin-left: -0.5em;
+  margin-right: -0.5em;
   > * {
     margin-left: 1em;
     margin-right: 1em;
