--- a/StewardClient/src/app/pages/util/typography/typography.component.html
+++ b/StewardClient/src/app/pages/util/typography/typography.component.html
@@ -12,14 +12,14 @@
       <h5>This is an h5</h5>
       <h6>This is an h6</h6>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in diam at leo suscipit dignissim.
-        Fusce id quam auctor ligula tempus consectetur. Pellentesque at fringilla justo. In sed
-        bibendum sapien. Orci varius natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Sed posuere quam mattis, dapibus diam eget, mollis felis. Nullam hendrerit
-        libero vel nisi dapibus, scelerisque tempor leo euismod. Quisque tempor, ante ut sodales
-        congue, odio ipsum ornare sapien, eget aliquam justo nisi nec libero. Etiam a metus ligula.
-        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        Phasellus eget tristique ipsum.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in diam at leo suscipit
+        dignissim. Fusce id quam auctor ligula tempus consectetur. Pellentesque at fringilla justo.
+        In sed bibendum sapien. Orci varius natoque penatibus et magnis dis parturient montes,
+        nascetur ridiculus mus. Sed posuere quam mattis, dapibus diam eget, mollis felis. Nullam
+        hendrerit libero vel nisi dapibus, scelerisque tempor leo euismod. Quisque tempor, ante ut
+        sodales congue, odio ipsum ornare sapien, eget aliquam justo nisi nec libero. Etiam a metus
+        ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+        egestas. Phasellus eget tristique ipsum.
       </p>
       <p>
         In facilisis leo quis nisl gravida sodales. Sed nec maximus est. Sed tempus nulla at velit
@@ -30,29 +30,29 @@
       <p>
         Aenean iaculis sit amet ante nec venenatis. Mauris eros metus, malesuada a dui non, lobortis
         mollis magna. Donec ullamcorper molestie nisl vitae pellentesque. Pellentesque at efficitur
-        arcu, in mollis dolor. Phasellus risus est, rutrum a dui eget, fermentum facilisis mi. Aliquam
-        erat volutpat. In volutpat, est quis mollis interdum, erat odio blandit sem, nec commodo purus
-        leo ullamcorper felis. Integer vehicula nibh vel lobortis luctus. Vestibulum mollis lectus sed
-        mattis auctor.
+        arcu, in mollis dolor. Phasellus risus est, rutrum a dui eget, fermentum facilisis mi.
+        Aliquam erat volutpat. In volutpat, est quis mollis interdum, erat odio blandit sem, nec
+        commodo purus leo ullamcorper felis. Integer vehicula nibh vel lobortis luctus. Vestibulum
+        mollis lectus sed mattis auctor.
       </p>
       <p>
         Praesent maximus rhoncus tincidunt. Mauris vulputate feugiat cursus. Nulla iaculis elementum
-        leo. Duis volutpat euismod sapien, et mattis ante tempus ut. Pellentesque cursus lectus magna,
-        quis viverra metus consequat tincidunt. Pellentesque habitant morbi tristique senectus et
-        netus et malesuada fames ac turpis egestas. Aliquam ac dictum arcu, vitae accumsan lectus.
-        Mauris tempor nulla quam, et eleifend velit convallis at.
+        leo. Duis volutpat euismod sapien, et mattis ante tempus ut. Pellentesque cursus lectus
+        magna, quis viverra metus consequat tincidunt. Pellentesque habitant morbi tristique
+        senectus et netus et malesuada fames ac turpis egestas. Aliquam ac dictum arcu, vitae
+        accumsan lectus. Mauris tempor nulla quam, et eleifend velit convallis at.
       </p>
       <p>
         Etiam dolor arcu, imperdiet ac odio vel, ultricies laoreet leo. Maecenas posuere nunc ut
-        accumsan viverra. Etiam eget purus ultricies est condimentum consectetur. Nullam pulvinar odio
-        a quam sagittis, id cursus eros tincidunt. Vivamus malesuada, mauris at placerat semper, arcu
-        dolor finibus felis, id consectetur est nisi id ligula. Pellentesque fringilla, leo ac
-        efficitur bibendum, dui elit ullamcorper turpis, sit amet vulputate sapien tortor vel ex.
-        Integer id ipsum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-        posuere cubilia curae; Proin nulla justo, viverra at venenatis suscipit, elementum et nulla.
-        Proin varius lorem quam, id efficitur dui lobortis aliquam. Praesent accumsan tellus et erat
-        dapibus, in ornare orci laoreet. Proin faucibus dolor quis libero finibus eleifend. Aliquam
-        dictum leo non sem vehicula tincidunt.
+        accumsan viverra. Etiam eget purus ultricies est condimentum consectetur. Nullam pulvinar
+        odio a quam sagittis, id cursus eros tincidunt. Vivamus malesuada, mauris at placerat
+        semper, arcu dolor finibus felis, id consectetur est nisi id ligula. Pellentesque fringilla,
+        leo ac efficitur bibendum, dui elit ullamcorper turpis, sit amet vulputate sapien tortor vel
+        ex. Integer id ipsum mauris. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Proin nulla justo, viverra at venenatis suscipit, elementum
+        et nulla. Proin varius lorem quam, id efficitur dui lobortis aliquam. Praesent accumsan
+        tellus et erat dapibus, in ornare orci laoreet. Proin faucibus dolor quis libero finibus
+        eleifend. Aliquam dictum leo non sem vehicula tincidunt.
       </p>
       <ul>
         <li>One</li>
