--- a/StewardClient/src/app/pages/util/action-monitor-multifire/action-monitor-multifire.component.html
+++ b/StewardClient/src/app/pages/util/action-monitor-multifire/action-monitor-multifire.component.html
@@ -88,7 +88,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 4xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 4xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[0]"
         [monitor]="monitors[0]"
@@ -102,7 +102,7 @@
       <button
         mat-raised-button
         color="accent"
-        matTooltip="Trigger standard 5xx error upstream (as if it came from the API), following MS-API conventions"
+        matTooltip="Trigger standard 5xx error upstream, as if it came from the API, following MS-API conventions"
         stateManager
         [disabled]="disableToggles[0]"
         [monitor]="monitors[0]"
@@ -116,7 +116,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 5xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 5xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[0]"
         [monitor]="monitors[0]"
@@ -196,7 +196,7 @@
       <button
         mat-raised-button
         color="accent"
-        matTooltip="Trigger standard 4xx error upstream (as if it came from the API), following MS-API conventions"
+        matTooltip="Trigger standard 4xx error upstream, as if it came from the API, following MS-API conventions"
         stateManager
         [disabled]="disableToggles[1]"
         [monitor]="monitors[1]"
@@ -211,7 +211,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 4xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 4xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[1]"
         [monitor]="monitors[1]"
@@ -241,7 +241,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 5xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 5xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[1]"
         [monitor]="monitors[1]"
