--- a/StewardClient/src/app/pages/util/action-monitor-singlefire/action-monitor-singlefire.component.html
+++ b/StewardClient/src/app/pages/util/action-monitor-singlefire/action-monitor-singlefire.component.html
@@ -57,7 +57,7 @@
       <button
         mat-raised-button
         color="accent"
-        matTooltip="Trigger standard 4xx error upstream (as if it came from the API), following MS-API conventions"
+        matTooltip="Trigger standard 4xx error upstream, as if it came from the API, following MS-API conventions"
         stateManager
         [disabled]="disableToggles[0]"
         [monitor]="monitors[0]"
@@ -72,7 +72,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 4xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 4xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[0]"
         [monitor]="monitors[0]"
@@ -87,7 +87,7 @@
       <button
         mat-raised-button
         color="accent"
-        matTooltip="Trigger standard 5xx error upstream (as if it came from the API), following MS-API conventions"
+        matTooltip="Trigger standard 5xx error upstream, as if it came from the API, following MS-API conventions"
         stateManager
         [disabled]="disableToggles[0]"
         [monitor]="monitors[0]"
@@ -102,7 +102,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 5xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 5xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[0]"
         [monitor]="monitors[0]"
@@ -186,7 +186,7 @@
       <button
         mat-raised-button
         color="accent"
-        matTooltip="Trigger standard 4xx error upstream (as if it came from the API), following MS-API conventions"
+        matTooltip="Trigger standard 4xx error upstream, as if it came from the API, following MS-API conventions"
         stateManager
         [disabled]="disableToggles[1]"
         [monitor]="monitors[1]"
@@ -202,7 +202,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 4xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 4xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[1]"
         [monitor]="monitors[1]"
@@ -218,7 +218,7 @@
       <button
         mat-raised-button
         color="accent"
-        matTooltip="Trigger standard 5xx error upstream (as if it came from the API), following MS-API conventions"
+        matTooltip="Trigger standard 5xx error upstream, as if it came from the API, following MS-API conventions"
         stateManager
         [disabled]="disableToggles[1]"
         [monitor]="monitors[1]"
@@ -234,7 +234,7 @@
       <button
         mat-raised-button
         color="warn"
-        matTooltip="Trigger standard 5xx error upstream (as if it came from the API), but without a properly formatted MS-API error response"
+        matTooltip="Trigger standard 5xx error upstream, as if it came from the API, but without a properly formatted MS-API error response"
         stateManager
         [disabled]="disableToggles[1]"
         [monitor]="monitors[1]"
