--- a/StewardClient/src/styles/mixins/variables/theme/_prepare-theme.scss
+++ b/StewardClient/src/styles/mixins/variables/theme/_prepare-theme.scss
@@ -81,6 +81,10 @@
       map-get(mat.$dark-theme-foreground-palette, 'base')
     );
     @include colorToVars(
+      makeLookupName('background', 'card'),
+      map-get(mat.$dark-theme-background-palette, 'card')
+    );
+    @include colorToVars(
       makeLookupName('foreground', 'disabled-text'),
       map-get(mat.$dark-theme-foreground-palette, 'disabled-text')
     );
@@ -120,6 +124,10 @@
     @include colorToVars(
       makeLookupName('background', 'text-contrast'),
       map-get(mat.$light-theme-foreground-palette, 'base')
+    );
+    @include colorToVars(
+      makeLookupName('background', 'card'),
+      map-get(mat.$light-theme-background-palette, 'card')
     );
     @include colorToVars(
       makeLookupName('foreground', 'disabled-text'),
