--- a/StewardClient/src/styles/mixins/variables/theme/_prepare-theme.scss
+++ b/StewardClient/src/styles/mixins/variables/theme/_prepare-theme.scss
@@ -92,7 +92,11 @@
       makeLookupName('highlight', 'default'),
       map-get(fgbg.$forza-bg-dark, 'highlight')
     );
+
+  // dark theme above
   } @else {
+  // light theme below
+
     @include colorToVars(
       makeLookupName('background', 'default'),
       map-get(mat.$light-theme-background-palette, 'background')
@@ -138,6 +142,7 @@
       map-get(fgbg.$forza-bg-light, 'highlight')
     );
   }
+
   background-color: app-color-default($app-background);
   color: app-color-default-contrast($app-background);
 }
