--- a/StewardClient/src/app/pages/tools/pages/gifting/components/gift-special-liveries/woodstock/woodstock-gift-special-liveries.component.html
+++ b/StewardClient/src/app/pages/tools/pages/gifting/components/gift-special-liveries/woodstock/woodstock-gift-special-liveries.component.html
@@ -24,10 +24,10 @@
           <mat-panel-title>
             <mat-checkbox
               clickStop
-              [ngModel]="livery.checked"
+              [(ngModel)]="livery.checked"
               matTooltip="Check to send this livery"
               (change)="checkboxChanged()"
-              >{{ livery.data.notes }}
+              >{{ livery.data.label }} on {{ livery.data.date | dateTimeToJsDate | date:'short' }}
             </mat-checkbox>
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -36,7 +36,7 @@
           <li><b>Car:</b> {{ livery.ugcData.carDescription }}</li>
           <li><b>Title:</b> {{ livery.ugcData.title }}</li>
           <li><b>Description:</b> {{ livery.ugcData.description }}</li>
-          <li><b>Created:</b> {{ livery.ugcData.createdDateUtc | utcDate: 'short' }}</li>
+          <li><b>Created:</b> {{ livery.ugcData.createdDateUtc | utcDate: 'shortDate' }}</li>
           <li><b>Share Code:</b> {{ livery.ugcData.shareCode || 'N/A' }}</li>
           <li><b>Id:</b> {{ livery.ugcData.id }}</li>
           <li>
