--- a/StewardClient/src/app/shared/components/json-dump/json-dump.component.html
+++ b/StewardClient/src/app/shared/components/json-dump/json-dump.component.html
@@ -1,18 +1,38 @@
-<mat-expansion-panel>
-  <mat-expansion-panel-header>
-    <mat-panel-title
-      ><button
-        mat-icon-button
-        color="warn"
-        matTooltip="Click to copy JSON"
-        [cdkCopyToClipboard]="input | bigjson"
-        clickStop
-      >
-        <mat-icon svgIcon="steward-copy"></mat-icon>
-      </button>
-      <ng-content></ng-content>
-    </mat-panel-title>
-    <mat-panel-description>Click to expand JSON</mat-panel-description>
-  </mat-expansion-panel-header>
-  <pre>{{ input | bigjson }}</pre>
-</mat-expansion-panel>
+
+<ng-container [ngSwitch]="template">
+  <mat-expansion-panel *ngSwitchCase="'array'">
+    <mat-expansion-panel-header>
+      <mat-panel-title
+        ><button
+          mat-icon-button
+          matTooltip="Click to copy JSON"
+          [cdkCopyToClipboard]="input | bigjson"
+          clickStop
+        >
+          <mat-icon svgIcon="steward-copy"></mat-icon>
+        </button>
+        <ng-content></ng-content>
+      </mat-panel-title>
+      <mat-panel-description>JSON Array ({{inputArray?.length}} items)</mat-panel-description>
+    </mat-expansion-panel-header>
+    <pre>{{ input | bigjson }}</pre>
+  </mat-expansion-panel>
+  
+  <mat-expansion-panel *ngSwitchDefault>
+    <mat-expansion-panel-header>
+      <mat-panel-title
+        ><button
+          mat-icon-button
+          matTooltip="Click to copy JSON"
+          [cdkCopyToClipboard]="input | bigjson"
+          clickStop
+        >
+          <mat-icon svgIcon="steward-copy"></mat-icon>
+        </button>
+        <ng-content></ng-content>
+      </mat-panel-title>
+      <mat-panel-description>Click to expand JSON</mat-panel-description>
+    </mat-expansion-panel-header>
+    <pre>{{ input | bigjson }}</pre>
+  </mat-expansion-panel>
+</ng-container>
