--- a/StewardClient/src/app/pages/tools/pages/gifting/components/gift-special-liveries/woodstock/woodstock-gift-special-liveries.component.html
+++ b/StewardClient/src/app/pages/tools/pages/gifting/components/gift-special-liveries/woodstock/woodstock-gift-special-liveries.component.html
@@ -62,6 +62,14 @@
   </mat-card-content>
 
   <mat-card-actions class="sf-actions">
+    <mat-form-field appearance="fill">
+      <mat-label>Gift Reason</mat-label>
+      <mat-select [formControl]="formControls.giftReason">
+        <mat-option *ngFor="let reason of giftReasons" [value]="reason">
+          {{ reason }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
     <button
       mat-raised-button
       color="primary"
@@ -71,7 +79,7 @@
       monitorDisable
       monitorWarn
       monitorWarnSnackbar
-      [disabled]="!verifyGift.checked"
+      [disabled]="!verifyGift.checked || !isGiftLiveryReady()"
       (click)="sendGiftLiveries()"
     >
       Send Liveries
