Tweak ESLint; Docs

--- a/StewardClient/src/app/pages/tools/pages/gifting/components/gift-special-liveries/woodstock/woodstock-gift-special-liveries.component.html
+++ b/StewardClient/src/app/pages/tools/pages/gifting/components/gift-special-liveries/woodstock/woodstock-gift-special-liveries.component.html
@@ -1,6 +1,6 @@
 <mat-card class="steward-layout-sticky-scroll">
   <mat-card-header class="sf-header">
-    <mat-card-title>Gift Livery + Car</mat-card-title>
+    <mat-card-title>Gift Special Livery + Car</mat-card-title>
     <mat-card-subtitle> Woodstock special liveries </mat-card-subtitle>
     <div class="sf-spacer"></div>
     <help-popover-icon
@@ -12,6 +12,10 @@
       <p>
         These are special liveries that have been given out as rewards to active players on certain
         dates.
+      </p>
+      <p>LSP Group Gifting is not currently supported.</p>
+      <p>
+        Two known Special Liveries are missing from this list, Xbox 20th Anniversary and Forza OPI.
       </p>
     </help-popover-icon>
   </mat-card-header>
