--- a/StewardClient/src/app/pages/tools/pages/auction/components/auction-data/auction-data.component.html
+++ b/StewardClient/src/app/pages/tools/pages/auction/components/auction-data/auction-data.component.html
@@ -65,7 +65,7 @@
       <mat-card-title>Car Summary</mat-card-title>
       <mat-card-subtitle>IDs and flags</mat-card-subtitle>
     </mat-card-header>
-    {{ auctionData.car.carId }}
+    <cached-car [carId]="auctionData.car.carId" [title]="title"></cached-car>
     <model-dump-xuids></model-dump-xuids>
     <model-dump-simple-table
       [values]="carSource.processedModel.extractedNumbers.ids"
