Creating a standard copy icon, especially for use in chips

--- a/StewardClient/src/styles/global/angular-material-icons.scss
+++ b/StewardClient/src/styles/global/angular-material-icons.scss
@@ -22,6 +22,7 @@ mat-chip {
   .mat-icon.mat-icon.mat-icon {
     width: $mat-icon-width;
     height: $mat-icon-height;
+    text-align: center;
     font-size: 24px;
     line-height: $mat-icon-line-height;
 
