--- a/StewardClient/src/app/shared/modules/standard-copy/standard-copy-icon/standard-copy-icon.component.html
+++ b/StewardClient/src/app/shared/modules/standard-copy/standard-copy-icon/standard-copy-icon.component.html
@@ -2,13 +2,13 @@
   <ng-content></ng-content>
 </div>
 <!-- TODO: Convert tooltip to popover. -->
-<a
-  mat-button
+<button
+  mat-icon-button
+  clickStop
   [cdkCopyToClipboard]="textToCopy"
   (cdkCopyToClipboardCopied)="onCopy($event)"
   [class.always-show]="alwaysShowIcon"
   aria-label="Copy"
-  clickStop
 >
   <mat-icon inline="true" [matTooltip]="tooltipText" #tooltip="matTooltip"> content_copy </mat-icon>
-</a>
+</button>
