--- a/StewardClient/src/app/shared/modules/standard-copy/standard-copy-icon/standard-copy-icon.component.scss
+++ b/StewardClient/src/app/shared/modules/standard-copy/standard-copy-icon/standard-copy-icon.component.scss
@@ -1,17 +1,12 @@
-:host {
-  display: flex;
-  flex-flow: row nowrap;
 
-  &:not(:hover) a:not(.always-show) {
-    visibility: hidden;
+mat-chip > :host ::ng-deep {
+  .mat-icon.mat-icon {
+    font-size: 18px;
   }
+}
 
-  a {
-    // tweak from usual button style
-    line-height: 1em;
-    padding: 0.25em;
-    min-width: unset;
-    display: flex;
-    align-items: center;
+mat-chip > :host:last-child ::ng-deep {
+  button {
+    margin-right: -12px; // forces the icon button to align with the right side
   }
 }
