Fixing copy icon and close icon

--- a/StewardClient/src/app/shared/modules/standard-copy/standard-copy-icon/standard-copy-icon.component.scss
+++ b/StewardClient/src/app/shared/modules/standard-copy/standard-copy-icon/standard-copy-icon.component.scss
@@ -1,9 +1,16 @@
 
 mat-chip > :host ::ng-deep {
-  .mat-icon.mat-icon {
+  .mat-icon.mat-icon.mat-icon {
     font-size: 18px;
   }
 }
+
+mat-chip > :host:not(:last-child) ::ng-deep {
+  .mat-button-base {
+    width: 24px;
+  }
+}
+
 
 mat-chip > :host:last-child ::ng-deep {
   button {
