--- a/StewardClient/src/app/pages/tools/pages/auction/sunrise-auction/sunrise-auction.component.html
+++ b/StewardClient/src/app/pages/tools/pages/auction/sunrise-auction/sunrise-auction.component.html
@@ -1,6 +1,6 @@
 <page-auction-data
   *waitForMonitor="getMonitor"
   [auctionData]="auctionData"
-  [title]="GameTitleAbbreviation.FH4"
+  [title]="GameTitle.FH4"
 >
 </page-auction-data>
