--- a/StewardClient/src/app/pages/tools/pages/auction/woodstock-auction/woodstock-auction.component.html
+++ b/StewardClient/src/app/pages/tools/pages/auction/woodstock-auction/woodstock-auction.component.html
@@ -1,8 +1,4 @@
-<page-auction-data
-  *waitForMonitor="getMonitor"
-  [auctionData]="auctionData"
-  [title]="GameTitle.FH5"
->
+<page-auction-data *waitForMonitor="getMonitor" [auctionData]="auctionData" [title]="GameTitle.FH5">
   <help-popover-icon cardTitle="Auction State" confluenceName="Auction State Card">
     <h3>Action: Delete</h3>
     <ul>
