Add text-center utility class; Fix text centering on home page and others

--- a/StewardClient/src/app/pages/auth/aad-login/aad-login.component.html
+++ b/StewardClient/src/app/pages/auth/aad-login/aad-login.component.html
@@ -1,4 +1,4 @@
-<center-contents>
+<center-contents class="text-center">
   <mat-card>
     <h1>You are now logged in.</h1>
     <p>You may close this window.</p>
