--- a/StewardClient/src/app/pages/auth/aad-logout/aad-logout.component.html
+++ b/StewardClient/src/app/pages/auth/aad-logout/aad-logout.component.html
@@ -1,4 +1,4 @@
-<center-contents>
+<center-contents class="text-center">
   <mat-card>
     <h1>You are now logged out.</h1>
     <p>You should be redirected automatically in a few seconds.</p>
