--- a/StewardClient/src/app/pages/auth/logout-iframe/logout-iframe.component.html
+++ b/StewardClient/src/app/pages/auth/logout-iframe/logout-iframe.component.html
@@ -1,4 +1,4 @@
-<center-contents>
+<center-contents class="text-center">
   <mat-card>
     <h1>Logout is proceeding in another window</h1>
     <p>You should be redirected when the logout completes.</p>
