--- a/StewardClient/src/app/pages/unauthorized/unauthorized.component.html
+++ b/StewardClient/src/app/pages/unauthorized/unauthorized.component.html
@@ -1,4 +1,4 @@
-<center-contents>
+<center-contents class="text-center">
   <mat-card>
     <h1>Unauthorized Access</h1>
     <p>You were trying to access a page your role does not have access to.</p>
