--- a/StewardClient/src/app/shared/views/stuck/stuck.component.html
+++ b/StewardClient/src/app/shared/views/stuck/stuck.component.html
@@ -1,4 +1,4 @@
-<center-contents *ngIf="shouldShow$ | async">
+<center-contents *ngIf="shouldShow$ | async" class="text-center">
   <mat-card>
     <h1>Ooops you seem to be stuck</h1>
     <p>If you're seeing this page, please let us know!</p>
