--- a/StewardClient/src/app/pages/auth/login/login.component.html
+++ b/StewardClient/src/app/pages/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<center-contents>
+<center-contents class="text-center">
   <mat-card>
     <h1>Login</h1>
     <p>
@@ -8,7 +8,7 @@
   </mat-card>
 </center-contents>
 
-<center-contents *ngIf="error">
+<center-contents *ngIf="error" class="text-center">
   <mat-card>
     <pre>{{ error | json }}</pre>
   </mat-card>
