--- a/StewardClient/src/app/pages/error/error.component.html
+++ b/StewardClient/src/app/pages/error/error.component.html
@@ -1,6 +1,6 @@
 <four-oh-four></four-oh-four>
 
-<center-contents>
+<center-contents class="text-center">
   <mat-card>
     <h1>You probably want one of these</h1>
     <available-apps></available-apps>
