--- a/StewardClient/src/app/shared/views/four-oh-four/four-oh-four.component.html
+++ b/StewardClient/src/app/shared/views/four-oh-four/four-oh-four.component.html
@@ -1,4 +1,4 @@
-<center-contents>
+<center-contents class="text-center">
   <h1>404</h1>
   <p>This page does not exist.</p>
   <pre>{{ location }}</pre>
