--- a/StewardClient/src/app/shared/modules/standard-form/toggle-list-ez/toggle-list-ez.component.html
+++ b/StewardClient/src/app/shared/modules/standard-form/toggle-list-ez/toggle-list-ez.component.html
@@ -46,4 +46,5 @@
     [formControl]="formControl"
     [order]="contract.order"
     [initial]="contract.initialModel"></toggle-list>
+  <pre>{{ contract.error | json }}</pre>
 </mat-card>
