--- a/StewardClient/src/app/pages/tools/pages/gifting/woodstock/woodstock-gifting.component.html
+++ b/StewardClient/src/app/pages/tools/pages/gifting/woodstock/woodstock-gifting.component.html
@@ -85,12 +85,12 @@
         <ng-template mat-tab-label>
           <span [matTooltip]="giftingLiveryTooltip">Gift Special Liveries</span>
         </ng-template>
-        <woodstock-gift-special-liveries
+        <gift-special-liveries
           [contract]="specialLiveriesContract"
           [playerIdentities]="selectedPlayerIdentities"
           [lspGroup]="selectedLspGroup"
           [usingPlayerIdentities]="isUsingPlayerIdentities"
-        ></woodstock-gift-special-liveries>
+        ></gift-special-liveries>
       </mat-tab>
     </mat-tab-group>
   </div>
