better element name for changelog tag details

--- a/StewardClient/src/app/sidebars/changelog/changelog-group/changelog-group.component.html
+++ b/StewardClient/src/app/sidebars/changelog/changelog-group/changelog-group.component.html
@@ -19,7 +19,7 @@
     >
       <mat-expansion-panel-header>
         <mat-panel-title>
-          <changelog-title-details [entry]="entry"></changelog-title-details>
+          <changelog-tag-details [entry]="entry"></changelog-tag-details>
           <mat-checkbox
             clickStop
             [ngModel]="isAcknowledgedEntry(entry)"
