--- a/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/localized-messaging.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/components/localized-messaging/localized-messaging.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Community Messaging</mat-card-title>
+    <mat-card-title>Localized Messaging</mat-card-title>
     <mat-card-subtitle>{{ service?.gameTitle | humanize }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
