--- a/StewardClient/src/app/pages/tools/pages/notifications/steelhead/steelhead-notifications.component.html
+++ b/StewardClient/src/app/pages/tools/pages/notifications/steelhead/steelhead-notifications.component.html
@@ -33,11 +33,11 @@
       (selectedTabChange)="viewSelectionTypeChange($event.index)"
     >
       <mat-tab label="Send">
-        <steelhead-community-messaging
+        <localized-messaging
           [playerIdentities]="playerIdentities"
           [selectedLspGroup]="selectedLspGroup"
           [isUsingPlayerIdentities]="isUsingPlayerIdentities"
-        ></steelhead-community-messaging>
+        ></localized-messaging>
       </mat-tab>
       <mat-tab label="Edit/Delete">
         <steelhead-individual-notification-management
